--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Ingreso de vehículo</h2>
+        {% block header %}{% endblock %}
     </header>
+
     <main>
         {% block content %}{% endblock %}
     </main>
